[gd_scene load_steps=6 format=3 uid="uid://dc7bya22ddb81"]

[ext_resource type="Script" path="res://scenes/ui/signup_form.gd" id="1_dj0tn"]
[ext_resource type="Texture2D" uid="uid://c7gelqclh2pum" path="res://assets/ui/icons/person_icon.png" id="2_v6mnc"]
[ext_resource type="Texture2D" uid="uid://l8w6wbo1twfv" path="res://assets/ui/icons/password_icon.png" id="3_0rgo4"]
[ext_resource type="FontFile" uid="uid://c4g6igiex5rko" path="res://assets/ui/font/monogram-extended.ttf" id="4_cfvq1"]
[ext_resource type="Script" path="res://classes/SoundButton.gd" id="5_6vqtq"]

[node name="SignupForm" type="VBoxContainer"]
theme_override_constants/separation = 3
script = ExtResource("1_dj0tn")

[node name="UsernameContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UsernameContainer"]
layout_mode = 2
texture = ExtResource("2_v6mnc")

[node name="UsernameLineEdit" type="LineEdit" parent="UsernameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Username"

[node name="PasswordContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PasswordContainer"]
layout_mode = 2
texture = ExtResource("3_0rgo4")

[node name="PasswordLineEdit" type="LineEdit" parent="PasswordContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Password"
secret = true

[node name="ConfirmPasswordContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="ConfirmPasswordContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("3_0rgo4")

[node name="ConfirmPasswordLineEdit" type="LineEdit" parent="ConfirmPasswordContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Confirm password"
secret = true

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ErrorScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="ErrorLabel" type="Label" parent="MarginContainer/ErrorScrollContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.909804, 0.231373, 0.231373, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = ExtResource("4_cfvq1")

[node name="ProcessingLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("4_cfvq1")
text = "Processing..."
horizontal_alignment = 1

[node name="SignupButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Sign up"
script = ExtResource("5_6vqtq")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
alignment = 1
